tests/ft/invalid/types/multi_function_same_arg_name.jk
func id(x: int) -> int { x }
func not_id(x: int) -> int { x }
